--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <h3>Media</h3>
       <img src="images/aws diagram.png" style="max-width:50%; height:auto; margin-bottom:50px;">
 
-      <video style="max-width:65%; height:auto;">
+      <video controls style="max-width:65%; height:auto;">
         <source src="images/fortnite.mp4" type="video/mp4" style="max-width:50%; height:auto;">
       </video>
 
