fixed errors from w3

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
     </div>
 
-    </div>
+    <div>
     <section id="misc">
       <h3>Miscellaneous Notes</h3>
       <ul>
@@ -79,13 +79,13 @@
 
     <section id="multimedia">
       <h3>Media</h3>
-      <img src="images/aws diagram.png" style="max-width:50%; height:auto; margin-bottom:50px;">
+      <img src="images/aws diagram.png" style="max-width:50%; height:auto; margin-bottom:50px" alt="AWS Diagram">
 
       <video controls style="max-width:65%; height:auto;">
         <source src="images/fortnite.mp4" type="video/mp4" style="max-width:50%; height:auto;">
       </video>
 
-      <br/>
+      <br>
 
       <audio controls>
         <source src="images/fortnite.mp3" type="audio/mpeg">
@@ -98,7 +98,7 @@
       <p>
         <strong>IMPORTANT WORDS</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, rem quo sequi id incidunt ducimus minima
         cupiditate <em>MORE IMPORTANT WORDS</em> soluta ea esse reiciendis at earum commodi necessitatibus eum sapiente fugiat! Alias,
-        distinctio. <br/><br/>
+        distinctio. <br><br>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam deserunt alias esse maxime quas inventore,
         cupiditate natus enim sunt ducimus, debitis dicta quaerat in ullam quis ad modi blanditiis nisi.
       </p>
