removed spacing from image names

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <section id="multimedia">
       <h3>Media</h3>
-      <img src="images/aws diagram.png" style="max-width:50%; height:auto; margin-bottom:50px" alt="AWS Diagram">
+      <img src="images/aws-diagram.png" style="max-width:50%; height:auto; margin-bottom:50px" alt="AWS Diagram">
 
       <video controls style="max-width:65%; height:auto;">
         <source src="images/fortnite.mp4" type="video/mp4" style="max-width:50%; height:auto;">
