switched folder name from images to media

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, intial-scale=1.0">
   <title>Meeting Notes</title>
-  <link rel="icon" href="images/favicon-32x32.png" type="image/png">
+  <link rel="icon" href="media/favicon-32x32.png" type="image/png">
 </head>
 
 <body>
@@ -79,16 +79,16 @@
 
     <section id="multimedia">
       <h3>Media</h3>
-      <img src="images/aws-diagram.png" style="max-width:50%; height:auto; margin-bottom:50px" alt="AWS Diagram">
+      <img src="media/aws-diagram.png" style="max-width:50%; height:auto; margin-bottom:50px" alt="AWS Diagram">
 
       <video controls style="max-width:65%; height:auto;">
-        <source src="images/fortnite.mp4" type="video/mp4" style="max-width:50%; height:auto;">
+        <source src="media/fortnite.mp4" type="video/mp4" style="max-width:50%; height:auto;">
       </video>
 
       <br>
 
       <audio controls>
-        <source src="images/fortnite.mp3" type="audio/mpeg">
+        <source src="media/fortnite.mp3" type="audio/mpeg">
       </audio>
 
     </section>
