added css sheet and standup sheet

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, intial-scale=1.0">
   <title>Meeting Notes</title>
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="media/favicon-32x32.png" type="image/png">
 </head>
 
