Added color and changed font

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
   <header>
     <h1>Meeting Minutes</h1>
     <nav>
-      <a href="#meetingInfo">Meeting Details</a>
-      <a href="#agenda">Agenda</a>
-      <a href="#unfinishedBusiness">Unfinished Business</a>
-      <a href="#newIdeas">New Ideas</a>
-      <a href="#misc">Miscellaneous</a>
-      <a href="#multimedia">Media</a>
+      <a class="nav-link" href="#meetingInfo">Meeting Details</a>
+      <a class="nav-link" href="#agenda">Agenda</a>
+      <a class="nav-link" href="#unfinishedBusiness">Unfinished Business</a>
+      <a class="nav-link" href="#newIdeas">New Ideas</a>
+      <a class="nav-link" href="#misc">Miscellaneous</a>
+      <a class="nav-link" href="#multimedia">Media</a>
     </nav>
   </header>
 
   <main>
     <section id="meetingInfo">
-      <h2>Meeting Details</h2>
+      <h2 id="header-2">Meeting Details</h2>
       <p><b>Meeting Topic:</b> Brainstorming CSE 110 Project Ideas</p>
       <p><b>Location:</b></p>
       <p><b>Date:</b> April 15, 2024</p>
@@ -96,7 +96,7 @@
 
     <details>
       <summary>Summary</summary>
-      <p>
+      <p id="summary-body">
         <strong>IMPORTANT WORDS</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, rem quo sequi id incidunt ducimus minima
         cupiditate <em>MORE IMPORTANT WORDS</em> soluta ea esse reiciendis at earum commodi necessitatibus eum sapiente fugiat! Alias,
         distinctio. <br><br>
