Implemented all CSS topics required

--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
 
     <section id="multimedia">
       <h3>Media</h3>
-      <img src="media/aws-diagram.png" style="max-width:50%; height:auto; margin-bottom:50px" alt="AWS Diagram">
+      <img id="aws-img" src="media/aws-diagram.png" style="max-width:50%; height:auto; margin-bottom:50px" alt="AWS Diagram">
 
-      <video controls style="max-width:65%; height:auto;">
+      <video id="fortnite-vid" controls style="max-width:65%; height:auto;">
         <source src="media/fortnite.mp4" type="video/mp4" style="max-width:50%; height:auto;">
       </video>
 
       <br>
 
-      <audio controls>
+      <audio id="fornite-audio" controls>
         <source src="media/fortnite.mp3" type="audio/mpeg">
       </audio>
 
@@ -107,8 +107,8 @@
 
     <hr>
 
-    <form style="margin-top:50px">
-      <fieldset>
+    <form style="margin-top:50px" id="work-form">
+      <fieldset id="form-fieldset">
         <label>Name:</label>
         <input type="text" placeholder="Enter your name"><br>
 
@@ -149,7 +149,7 @@
             <option>UCSD</option>
         </select><br>
 
-        <button>Submit Feedback</button>
+        <button id="form-button">Submit Feedback</button>
       </fieldset>
     </form>
 
